--- a/donut.css
+++ b/donut.css
@@ -2,7 +2,7 @@ body {
   font-size: 24px;
   background-color: #d4836a;
   text-align: center;
-
+  background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/delish-donuts-2-1542639436.jpg");
 }
 
 h1,h3 {
