--- a/donut.css
+++ b/donut.css
@@ -39,7 +39,7 @@ button {
 
 @font-face {
   font-family: Blackout;
-  src: url("C:/Users/owner/Desktop/CampStack Donut World/Fonts/Blackout FREE.otf")
+  src: url("Fonts/Blackout FREE.otf")
 }
 
 .shop-title {
