--- a/New folder/Recipes.css
+++ b/New folder/Recipes.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   text-decoration: underline;
-  color: #03fc94;
+  color: #58388a;
   font-family: "Sofia";
   font-size: 45px;
 }
@@ -17,4 +17,16 @@ h1 {
 p {
   font-size: 25px;
 }
-#e5ff66
+
+em {
+  font-weight: bold;
+}
+
+#must {
+  text-decoration: underline;
+}
+
+a {
+  font-size: 15px;
+}
+#e5ff66-#03fc94
