--- a/New folder/Recipes.css
+++ b/New folder/Recipes.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
   text-decoration: underline;
-  color: #58388a;
+  color: #126e22;
   font-family: "Sofia";
   font-size: 45px;
 }
@@ -29,4 +29,4 @@ em {
 a {
   font-size: 15px;
 }
-#e5ff66-#03fc94
+#e5ff66-#03fc94-#075415-#388a47
